21/10/2024 - UPDATE of the website

--- a/index.html
+++ b/index.html
@@ -70,11 +70,13 @@
             </div>
             <div class="name-div">
                 <h1 class="radley-regular-italic">About Dardan Tërnava</h1>
-            </div>
-            <div class="summary-div">
                 <h2 class="carlito-regular">Recent uni grad. I am passionate about brand design, illustration, and print design. My goal is to make my mark in digital media and tech spaces. I would love to work with people and companies who will give me an opportunity to flex my sleek and polished style. Reach out if you think we can create impactful visual art together.</h2>
+
             </div>
+
         </div>
+
+        <hr>
 
         <div class="fourth-div section">
             <div class="background-div">
@@ -84,32 +86,108 @@
                 <h1 class="radley-regular">Add a 1st Educational
                     or Work Affiliation</h1>
                 <hr>
-                <h2 class="carlito-regular">Briefly <span class="carlito-bold">introduce</span> the designer's 
+                <h2 class="carlito-regular">Briefly <span class="carlito-bold">introduce</span> the programmer's 
                     connection to the institution</h2>
             </div>
             <div class="certification">
                 <h1 class="radley-regular">Add a 2nd Educational
                     or Work Affiliation</h1>
                 <hr>
-                <h2 class="carlito-regular">Briefly <span class="carlito-bold">introduce</span> the designer's 
+                <h2 class="carlito-regular">Briefly <span class="carlito-bold">introduce</span> the programmer's 
                     connection to the institution</h2>
             </div>
             <div class="certification">
                 <h1 class="radley-regular">Add a 3rd Educational
                     or Work Affiliation</h1>
                 <hr>
-                <h2 class="carlito-regular">Briefly <span class="carlito-bold">introduce</span> the designer's 
+                <h2 class="carlito-regular">Briefly <span class="carlito-bold">introduce</span> the programmer's 
                     connection to the institution</h2>
             </div>
         </div>
 
         <hr>
 
-        <div class="fifth-div section"></div>
+        <div class="fifth-div section">
+            <div class="background-div">
+                <h1 class="radley-regular">Project Focuses</h1>
+            </div>
+            <div class="certification">
+                <img src="./elements/frontend.jpg" alt="Front-End">
+                <h1 class="radley-regular">Front-End Developer</h1>
+                <hr>
+                <h2 class="carlito-regular">Briefly <span class="carlito-bold">introduce</span> the programmer's 
+                    work on this field</h2>
+            </div>
+            <div class="certification">
+                <img src="./elements/Python.png" alt="Python Scripting">
+                <h1 class="radley-regular">Python Scripting</h1>
+                <hr>
+                <h2 class="carlito-regular">Briefly <span class="carlito-bold">introduce</span> the programmer's 
+                    work on this field</h2>
+            </div>
+            <div class="certification">
+                <img src="./elements/telegrambot.png" alt="Telegram BOT">
+                <h1 class="radley-regular">Telegram BOT Creation</h1>
+                <hr>
+                <h2 class="carlito-regular">Briefly <span class="carlito-bold">introduce</span> the programmer's 
+                    work on this field</h2>
+            </div>
+            <div class="certification">
+                <img src="./elements/google ads.png" alt="Google ads">
+                <h1 class="radley-regular">Google Ads - Campaigns</h1>
+                <hr>
+                <h2 class="carlito-regular">Briefly <span class="carlito-bold">introduce</span> the programmer's 
+                    work on this field</h2>
+            </div>
+        </div>
 
-        <div class="sixth-div section"></div>
+        <hr>
 
-        <div class="seventh-div section"></div>
+        <div class="sixth-div section">
+            <div class="background-div">
+                <h1 class="radley-regular">Project Gallery</h1>
+                <h2 class="carlito-regular">Here are some of the projects I worked on</h2>
+            </div>
+            <div class="certification">
+                <img src="./elements/Python.png" alt="Front-End">
+                <h1 class="radley-regular">Example</h1>
+            </div>
+            <div class="certification">
+                <img src="./elements/Python.png" alt="Front-End">
+                <h1 class="radley-regular">Example</h1>
+            </div>
+            <div class="certification">
+                <img src="./elements/Python.png" alt="Front-End">
+                <h1 class="radley-regular">Example</h1>
+            </div>
+        </div>
+
+        <div class="seventh-div section">
+            <div class="certification">
+                <img src="./elements/Python.png" alt="Front-End">
+                <h1 class="radley-regular">Example</h1>
+            </div>
+            <div class="certification">
+                <img src="./elements/Python.png" alt="Front-End">
+                <h1 class="radley-regular">Example</h1>
+            </div>
+            <div class="certification">
+                <img src="./elements/Python.png" alt="Front-End">
+                <h1 class="radley-regular">Example</h1>
+            </div>
+            <div class="certification">
+                <img src="./elements/Python.png" alt="Front-End">
+                <h1 class="radley-regular">Example</h1>
+            </div>
+            <div class="certification">
+                <img src="./elements/Python.png" alt="Front-End">
+                <h1 class="radley-regular">Example</h1>
+            </div>
+            <div class="certification">
+                <img src="./elements/Python.png" alt="Front-End">
+                <h1 class="radley-regular">Example</h1>
+            </div>
+        </div>
 
         <div class="eightth-div section"></div>
 
