--- a/index.html
+++ b/index.html
@@ -83,22 +83,25 @@
                 <h1 class="radley-regular">Background</h1>
             </div>
             <div class="certification">
-                <h1 class="radley-regular">Add a 1st Educational
-                    or Work Affiliation</h1>
+                <img src="./elements/logo-udemy.svg" alt="udemy course bootcamp logo certification">
+                <!-- https://www.udemy.com/certificate/UC-6f6a3bc6-2cd9-4ad3-be59-7675d8a2b6a6/ -->
+                <h1 class="radley-regular">100 Days of Code: The Complete Python Pro Bootcamp</h1>
                 <hr>
                 <h2 class="carlito-regular">Briefly <span class="carlito-bold">introduce</span> the programmer's 
                     connection to the institution</h2>
             </div>
             <div class="certification">
-                <h1 class="radley-regular">Add a 2nd Educational
-                    or Work Affiliation</h1>
+                <img src="./elements/logo-udemy.svg" alt="udemy course bootcamp logo certification">
+                <!-- https://www.udemy.com/certificate/UC-98805112-4c28-4774-ac57-18eea1bdd2e0/ -->
+                <h1 class="radley-regular">
+                    The Complete Shopify Dropshipping Course</h1>
                 <hr>
                 <h2 class="carlito-regular">Briefly <span class="carlito-bold">introduce</span> the programmer's 
                     connection to the institution</h2>
             </div>
             <div class="certification">
-                <h1 class="radley-regular">Add a 3rd Educational
-                    or Work Affiliation</h1>
+                <img src="./elements/logo-udemy.svg" alt="udemy course bootcamp logo certification">
+                <h1 class="radley-regular">The Complete Web Development Bootcamp</h1>
                 <hr>
                 <h2 class="carlito-regular">Briefly <span class="carlito-bold">introduce</span> the programmer's 
                     connection to the institution</h2>
@@ -111,33 +114,29 @@
             <div class="background-div">
                 <h1 class="radley-regular">Project Focuses</h1>
             </div>
-            <div class="certification">
+            <div class="field">
                 <img src="./elements/frontend.jpg" alt="Front-End">
                 <h1 class="radley-regular">Front-End Developer</h1>
                 <hr>
-                <h2 class="carlito-regular">Briefly <span class="carlito-bold">introduce</span> the programmer's 
-                    work on this field</h2>
+                <h2 class="carlito-regular">Front-End <span class="carlito-bold">developer</span> in the making. This website is proof of my work.</h2>
             </div>
-            <div class="certification">
+            <div class="field">
                 <img src="./elements/Python.png" alt="Python Scripting">
                 <h1 class="radley-regular">Python Scripting</h1>
                 <hr>
-                <h2 class="carlito-regular">Briefly <span class="carlito-bold">introduce</span> the programmer's 
-                    work on this field</h2>
+                <h2 class="carlito-regular">Certified Python <span class="carlito-bold">programmer</span> since 2022</h2>
             </div>
-            <div class="certification">
-                <img src="./elements/telegrambot.png" alt="Telegram BOT">
-                <h1 class="radley-regular">Telegram BOT Creation</h1>
+            <div class="field">
+                <img src="./elements/shopify-logo.png" alt="Telegram BOT">
+                <h1 class="radley-regular">Shopify Store Creation</h1>
                 <hr>
-                <h2 class="carlito-regular">Briefly <span class="carlito-bold">introduce</span> the programmer's 
-                    work on this field</h2>
+                <h2 class="carlito-regular">Certified Shopify Store <span class="carlito-bold">creator</span> with real-life business experience.</h2>
             </div>
-            <div class="certification">
+            <div class="field">
                 <img src="./elements/google ads.png" alt="Google ads">
                 <h1 class="radley-regular">Google Ads - Campaigns</h1>
                 <hr>
-                <h2 class="carlito-regular">Briefly <span class="carlito-bold">introduce</span> the programmer's 
-                    work on this field</h2>
+                <h2 class="carlito-regular">G-ADS <span class="carlito-bold">targeted</span> campaigns expert.</h2>
             </div>
         </div>
 
@@ -180,15 +179,11 @@
         <div class="eightth-div section"></div>
 
         <div class="ninth-div section">
-            <div class="cutout dv1"></div>
-            <div class="cutout dv2"></div>
-            <div class="cutout dv3"></div>
-            <div class="cutout dv4"></div>
-            <div class="cutout dv5"></div>
-            <div class="cutout dv6"></div>
-            <div class="cutout dv7"></div>
-            <div class="cutout dv8"></div>
-            <div class="cutout dv9"></div>
+            <div class="last-field">
+                <h1 class="radley-regular">Reach out if you want to create Python Scripts, Shopify Stores and more together.</h1>
+                <hr>
+                <h2 class="carlito-regular">To see more of my work, visit my socials:</h2>
+            </div>
         </div>
     </body>
 </html>
