--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Radley:ital@0;1&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Carlito:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=chat" />
 
         <title>Dardan Tërnava</title>
     </head>
@@ -180,9 +181,34 @@
 
         <div class="ninth-div section">
             <div class="last-field">
-                <h1 class="radley-regular">Reach out if you want to create Python Scripts, Shopify Stores and more together.</h1>
+                <h1 class="radley-regular">Reach out if you want to create Python Scripts, Shopify Stores or even costum websites together.</h1>
                 <hr>
-                <h2 class="carlito-regular">To see more of my work, visit my socials:</h2>
+                <h2 class="carlito-regular">TO SEE MORE OF MY WORK, VISIT MY <a href="https://github.com/drdtrn">GitHub</a>.</h2>
+            </div>
+            <div class="contacts">
+                <div class="email">
+                    <div class="svg">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-envelope-check-fill" viewBox="0 0 16 16">
+                            <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414zM0 4.697v7.104l5.803-3.558zM6.761 8.83l-6.57 4.026A2 2 0 0 0 2 14h6.256A4.5 4.5 0 0 1 8 12.5a4.49 4.49 0 0 1 1.606-3.446l-.367-.225L8 9.586zM16 4.697v4.974A4.5 4.5 0 0 0 12.5 8a4.5 4.5 0 0 0-1.965.45l-.338-.207z"/>
+                            <path d="M16 12.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0m-1.993-1.679a.5.5 0 0 0-.686.172l-1.17 1.95-.547-.547a.5.5 0 0 0-.708.708l.774.773a.75.75 0 0 0 1.174-.144l1.335-2.226a.5.5 0 0 0-.172-.686"/>
+                        </svg>
+                    </div>
+                    <div class="details">
+                        <h2 class="carlito-regular">EMAIL</h2>
+                        <h2 class="radley-regular">dardanternava<span class="carlito-regular">1</span>@gmail.com</h2>
+                    </div>
+                </div>
+                <div class="phone">
+                    <div class="svg">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-chat-quote-fill" viewBox="0 0 16 16">
+                            <path d="M16 8c0 3.866-3.582 7-8 7a9 9 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7M7.194 6.766a1.7 1.7 0 0 0-.227-.272 1.5 1.5 0 0 0-.469-.324l-.008-.004A1.8 1.8 0 0 0 5.734 6C4.776 6 4 6.746 4 7.667c0 .92.776 1.666 1.734 1.666.343 0 .662-.095.931-.26-.137.389-.39.804-.81 1.22a.405.405 0 0 0 .011.59c.173.16.447.155.614-.01 1.334-1.329 1.37-2.758.941-3.706a2.5 2.5 0 0 0-.227-.4zM11 9.073c-.136.389-.39.804-.81 1.22a.405.405 0 0 0 .012.59c.172.16.446.155.613-.01 1.334-1.329 1.37-2.758.942-3.706a2.5 2.5 0 0 0-.228-.4 1.7 1.7 0 0 0-.227-.273 1.5 1.5 0 0 0-.469-.324l-.008-.004A1.8 1.8 0 0 0 10.07 6c-.957 0-1.734.746-1.734 1.667 0 .92.777 1.666 1.734 1.666.343 0 .662-.095.931-.26z"/>
+                        </svg>
+                    </div>
+                    <div class="details">
+                        <h2 class="carlito-regular">WHATSAPP</h2>
+                        <h2 class="radley-regular">(+383) 45 264 723</h2>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
