--- a/index.html
+++ b/index.html
@@ -83,37 +83,41 @@
             <div class="background-div">
                 <h1 class="radley-regular">Background</h1>
             </div>
-            <div class="certification">
-                <img src="./elements/logo-udemy.svg" alt="udemy course bootcamp logo certification">
-                <!-- https://www.udemy.com/certificate/UC-6f6a3bc6-2cd9-4ad3-be59-7675d8a2b6a6/ -->
-                <h1 class="radley-regular">100 Days of Code: The Complete Python Pro Bootcamp</h1>
-                <hr>
-                <h2 class="carlito-regular">Briefly <span class="carlito-bold">introduce</span> the programmer's 
-                    connection to the institution</h2>
-            </div>
-            <div class="certification">
-                <img src="./elements/logo-udemy.svg" alt="udemy course bootcamp logo certification">
-                <!-- https://www.udemy.com/certificate/UC-98805112-4c28-4774-ac57-18eea1bdd2e0/ -->
-                <h1 class="radley-regular">
-                    The Complete Shopify Dropshipping Course</h1>
-                <hr>
-                <h2 class="carlito-regular">Briefly <span class="carlito-bold">introduce</span> the programmer's 
-                    connection to the institution</h2>
-            </div>
-            <div class="certification">
-                <img src="./elements/logo-udemy.svg" alt="udemy course bootcamp logo certification">
-                <h1 class="radley-regular">The Complete Web Development Bootcamp</h1>
-                <hr>
-                <h2 class="carlito-regular">Briefly <span class="carlito-bold">introduce</span> the programmer's 
-                    connection to the institution</h2>
-            </div>
+            <a href="https://www.udemy.com/certificate/UC-6f6a3bc6-2cd9-4ad3-be59-7675d8a2b6a6/" target="_blank">
+                <div class="certification">
+                    <img src="./elements/logo-udemy.svg" alt="udemy course bootcamp logo certification">
+                    <h1 class="radley-regular">100 Days of Code: The Complete Python Pro Bootcamp</h1>
+                    <hr>
+                    <!-- <h2 class="carlito-regular">Briefly <span class="carlito-bold">introduce</span> the programmer's 
+                        connection to the institution</h2> -->
+                </div>
+            </a>
+            <a href="https://www.udemy.com/certificate/UC-98805112-4c28-4774-ac57-18eea1bdd2e0/" target="_blank">
+                <div class="certification">
+                    <img src="./elements/logo-udemy.svg" alt="udemy course bootcamp logo certification">
+                    <h1 class="radley-regular">
+                        The Complete Shopify Dropshipping Course</h1>
+                    <hr>
+                    <!-- <h2 class="carlito-regular">Briefly <span class="carlito-bold">introduce</span> the programmer's 
+                        connection to the institution</h2> -->
+                </div>
+            </a>
+            <a href="#">
+                <div class="certification">
+                    <img src="./elements/logo-udemy.svg" alt="udemy course bootcamp logo certification">
+                    <h1 class="radley-regular">The Complete Web Development Bootcamp</h1>
+                    <hr>
+                    <!-- <h2 class="carlito-regular">Briefly <span class="carlito-bold">introduce</span> the programmer's 
+                        connection to the institution</h2> -->
+                </div>
+            </a>
         </div>
 
         <hr>
 
         <div class="fifth-div section">
             <div class="background-div">
-                <h1 class="radley-regular">Project Focuses</h1>
+                <h1 class="radley-regular p-focus">Project Focuses</h1>
             </div>
             <div class="field">
                 <img src="./elements/frontend.jpg" alt="Front-End">
