--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
         <meta charset="UTF-8">
 
         <link rel="stylesheet" href="./styles.css">
+        <link rel="icon" type="image/x-icon" href="./elements/dmicon2.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Radley:ital@0;1&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Carlito:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=chat" />
 
-        <title>Dardan Tërnava</title>
+        <title>DM Daily Deals L.L.C</title>
     </head>
 
     <body>
@@ -21,10 +22,10 @@
         </header>
 
         <div class="first-div section">
-            <h1 class="radley-regular first-div-title"><span class="radley-regular-italic">Hello,</span> I am Dardan!</h1>
-            <h2 class="carlito-regular first-div-content">Efficiency and precision are my guiding principles. Whether it's crafting targeted ads or building web solutions, I focus on delivering results with clarity and purpose.</h2>
+            <h1 class="radley-regular first-div-title"><span class="radley-regular-italic">Hello,</span> we are DM !</h1>
+            <h2 class="carlito-regular first-div-content">Efficiency and precision are our guiding principles. Whether it's python, crafting targeted ads or building web solutions, we focus on delivering results with clarity and purpose.</h2>
             <div class="hire-me-div">
-                <h2 class="radley-regular-italic hire-me">Hire me</h2>
+                <h2 class="radley-regular-italic hire-me">Hire us</h2>
                 <hr class="solid">
             </div>
 
@@ -70,8 +71,13 @@
                 <img src="./elements/pic3.jpg" alt="this website's creator profile picture" class="profile-picture">
             </div>
             <div class="name-div">
-                <h1 class="radley-regular-italic">About Dardan Tërnava</h1>
-                <h2 class="carlito-regular">Recent uni grad. I am passionate about brand design, illustration, and print design. My goal is to make my mark in digital media and tech spaces. I would love to work with people and companies who will give me an opportunity to flex my sleek and polished style. Reach out if you think we can create impactful visual art together.</h2>
+                <h1 class="radley-regular-italic">Dardan Tërnava, Founder, CEO & Lead Operator</h1>
+                <h2 class="carlito-regular">As an experienced eCommerce business owner and programmer, 
+                    I am passionate about building impactful online brands, developing Python scripts, 
+                    and driving growth through targeted advertising. My focus is on crafting innovative 
+                    solutions that elevate businesses in the digital marketplace. Whether optimizing 
+                    user journeys or launching data-driven campaigns, my goal is to deliver results that 
+                    resonate with both businesses and their customers.</h2>
 
             </div>
 
@@ -81,7 +87,7 @@
 
         <div class="fourth-div section">
             <div class="background-div">
-                <h1 class="radley-regular">Background</h1>
+                <h1 class="radley-regular">CEO Background</h1>
             </div>
             <div class="certification">
                 <a href="https://www.udemy.com/certificate/UC-6f6a3bc6-2cd9-4ad3-be59-7675d8a2b6a6/" target="_blank"><img src="./elements/logo-udemy.svg" alt="udemy course bootcamp logo certification"></a>
@@ -117,7 +123,7 @@
             </div>
             <div class="field">
                 <img src="./elements/frontend.jpg" alt="Front-End">
-                <h1 class="radley-regular">Front-End Developer</h1>
+                <h1 class="radley-regular">Front-End Developing</h1>
                 <hr>
                 <h2 class="carlito-regular">Front-End <span class="carlito-bold">developer</span> in the making. This website is proof of my work.</h2>
             </div>
@@ -146,7 +152,7 @@
         <div class="sixth-div section">
             <div class="background-div">
                 <h1 class="radley-regular">Project Gallery</h1>
-                <h2 class="carlito-regular">Here are some of the projects I worked on</h2>
+                <h2 class="carlito-regular">Here are some of the projects we worked on</h2>
             </div>
             <div class="certification">
                 <img src="./elements/Python.png" alt="Front-End">
@@ -181,9 +187,9 @@
 
         <div class="ninth-div section">
             <div class="last-field">
-                <h1 class="radley-regular">Reach out if you want to create Python Scripts, Shopify Stores or even costum websites together.</h1>
+                <h1 class="radley-regular">Reach out if you want to create Python Scripts, Shopify Stores, G-ADS Campaigns or even costum websites together.</h1>
                 <hr>
-                <h2 class="carlito-regular">TO SEE MORE OF MY WORK, VISIT MY <a href="https://github.com/drdtrn">GitHub</a>.</h2>
+                <h2 class="carlito-regular">TO SEE MORE OF OUR WORK, VISIT THIS <a href="https://github.com/drdtrn">GitHub</a>.</h2>
             </div>
             <div class="contacts">
                 <div class="email">
