--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
                 <h1 class="radley-regular">Reach out if you want to create Python Scripts, Shopify Stores, G-ADS Campaigns or even costum websites together.</h1>
                 <hr>
                 <h2 class="carlito-regular">TO SEE MORE OF OUR WORK, VISIT THIS <a href="https://github.com/drdtrn">GitHub</a>.</h2>
+                <a href="#" style="font-size: 14px;">DM Daily Deals LLC</a>
             </div>
             <div class="contacts">
                 <div class="email">
