--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <body>
         <header>
             <div id="company-logo">
-                <img src="./elements/lowercaselogo.png" class="com-logo">
+                <a href="#" class="com-logo">
+                <img src="./elements/lowercaselogo.png" class="com-logo" alt="dmdailydeals company logo brand">
+                </a>
             </div>
         </header>
 
@@ -72,11 +74,11 @@
             </div>
             <div class="name-div">
                 <h1 class="radley-regular-italic">Dardan Tërnava, Founder, CEO & Lead Operator</h1>
-                <h2 class="carlito-regular">As an experienced eCommerce business owner and programmer, 
-                    I am passionate about building impactful online brands, developing Python scripts, 
-                    and driving growth through targeted advertising. My focus is on crafting innovative 
+                <h2 class="carlito-regular">Our leader Dardan, as an experienced eCommerce business owner and programmer, 
+                    is passionate about building impactful online brands, developing Python scripts, 
+                    and driving growth through targeted advertising. His focus is on crafting innovative 
                     solutions that elevate businesses in the digital marketplace. Whether optimizing 
-                    user journeys or launching data-driven campaigns, my goal is to deliver results that 
+                    user journeys or launching data-driven campaigns, his goal for the company is to deliver results that 
                     resonate with both businesses and their customers.</h2>
 
             </div>
@@ -87,7 +89,7 @@
 
         <div class="fourth-div section">
             <div class="background-div">
-                <h1 class="radley-regular">CEO Background</h1>
+                <h1 class="radley-regular">Our CEO-s Background</h1>
             </div>
             <div class="certification">
                 <a href="https://www.udemy.com/certificate/UC-6f6a3bc6-2cd9-4ad3-be59-7675d8a2b6a6/" target="_blank"><img src="./elements/logo-udemy.svg" alt="udemy course bootcamp logo certification"></a>
@@ -119,7 +121,7 @@
 
         <div class="fifth-div section">
             <div class="background-div">
-                <h1 class="radley-regular p-focus">Project Focuses</h1>
+                <h1 class="radley-regular p-focus">Our Project Focuses</h1>
             </div>
             <div class="field">
                 <img src="./elements/frontend.jpg" alt="Front-End">
@@ -151,35 +153,35 @@
 
         <div class="sixth-div section">
             <div class="background-div">
-                <h1 class="radley-regular">Project Gallery</h1>
-                <h2 class="carlito-regular">Here are some of the projects we worked on</h2>
+                <h1 class="radley-regular">Our Project Gallery</h1>
+                <h2 class="carlito-regular">Here are some of the projects we worked on.</h2>
             </div>
             <div class="certification">
-                <img src="./elements/Python.png" alt="Front-End">
-                <h1 class="radley-regular">Example</h1>
+                <img src="./elements/DMDAILYDEALS.png" alt="Shopify dropshipping store brand">
+                <h1 class="radley-regular">DMDailyDeals Shopify dropshipping store.</h1>
             </div>
             <div class="certification">
-                <img src="./elements/Python.png" alt="Front-End">
-                <h1 class="radley-regular">Example</h1>
+                <img src="./elements/telegrambot.png" alt="Python-Telegram web scraping and auto-poster BOT">
+                <h1 class="radley-regular">Python-Telegram web scraping and auto-poster BOT for <a class="radley-regular" href="https://t.me/cryptocoin_allnews" target="_blank">Bitcoin News Crypto</a> Channel.</h1>
             </div>
         </div>
 
         <div class="seventh-div section">
             <div class="certification">
-                <img src="./elements/Python.png" alt="Front-End">
-                <h1 class="radley-regular">Example</h1>
+                <img src="./elements/frontend.jpg" alt="Front-End Personal Website">
+                <h1 class="radley-regular">This website you are seeing.</h1>
             </div>
             <div class="certification">
-                <img src="./elements/Python.png" alt="Front-End">
-                <h1 class="radley-regular">Example</h1>
+                <img src="./elements/telegrambot.png" alt="Python-Telegram web scraping and auto-poster BOT">
+                <h1 class="radley-regular">Python-Telegram web scraping and auto-poster BOT for <a class="radley-regular" href="https://t.me/cryptocoin_allnews" target="_blank">DM Daily</a> Channel.</h1>
             </div>
             <div class="certification">
-                <img src="./elements/Python.png" alt="Front-End">
-                <h1 class="radley-regular">Example</h1>
+                <img src="./elements/google ads.png" alt="Google Ads Targeted Keyword Campaigns for dropshipping stores">
+                <h1 class="radley-regular">Google Ads Targeted Keyword Campaigns for dropshipping stores.</h1>
             </div>
             <div class="certification">
-                <img src="./elements/Python.png" alt="Front-End">
-                <h1 class="radley-regular">Example</h1>
+                <img src="./elements/Python.png" alt="Medical Blog website with HTML, CSS & Python">
+                <h1 class="radley-regular">Medical Blog website with HTML, CSS & Python</h1>
             </div>
         </div>
 
@@ -202,7 +204,7 @@
                     </div>
                     <div class="details">
                         <h2 class="carlito-regular">EMAIL</h2>
-                        <h2 class="radley-regular">dardanternava<span class="carlito-regular">1</span>@gmail.com</h2>
+                        <h2 class="radley-regular">info@dmdailydeals.com</h2>
                     </div>
                 </div>
                 <div class="phone">
