--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body>
         <header>
             <div id="company-logo">
-                <a href="#" class="com-logo">
+                <a href="./medical.html" class="com-logo">
                 <img src="./elements/lowercaselogo.png" class="com-logo" alt="dmdailydeals company logo brand">
                 </a>
             </div>
@@ -173,7 +173,7 @@
             </div>
             <div class="certification">
                 <img src="./elements/telegrambot.png" alt="Python-Telegram web scraping and auto-poster BOT">
-                <h1 class="radley-regular">Python-Telegram web scraping and auto-poster BOT for <a class="radley-regular" href="https://t.me/cryptocoin_allnews" target="_blank">DM Daily</a> Channel.</h1>
+                <h1 class="radley-regular">Python-Telegram web scraping and auto-poster BOT for <a class="radley-regular" href="https://t.me/dmdailydeals" target="_blank">DM Daily</a> Channel.</h1>
             </div>
             <div class="certification">
                 <img src="./elements/google ads.png" alt="Google Ads Targeted Keyword Campaigns for dropshipping stores">
